test/files/neg/javac-error.check
#partest java6
javac-error/J.java:2: method does not override or implement a method from a supertype
  @Override public void foo() { }
  ^
1 error
#partest java7
javac-error/J.java:2: error: method does not override or implement a method from a supertype
  @Override public void foo() { }
  ^
1 error
